syntax = "proto3";

package organization;

option go_package = "./organization";

/*============================================================
organizationService
组织结构（树形）的增删改查及层级查询服务
============================================================*/
service organizationService {

  //  CreateOrganization 创建组织节点
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse);

  // GetOrganization 获取组织节点
  rpc GetOrganization(GetOrganizationRequest) returns (Organization);

  //  UpdateOrganization 更新组织节点名称
  rpc UpdateOrganization(UpdateOrganizationRequest) returns (Organization);

  // DeleteOrganization 删除组织节点
  rpc DeleteOrganization(DeleteOrganizationRequest) returns (DeleteOrganizationResponse);

  //  ListOrganizations 分页查询子节点
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);

  // GetAncestors 获取祖先链
  rpc GetAncestors(GetAncestorsRequest) returns (GetAncestorsResponse);

  //  GetDescendants 获取后代树
  rpc GetDescendants(GetDescendantsRequest) returns (GetDescendantsResponse);
}

/*================ 请求/响应消息 ================*/

/* 创建组织节点 */
message CreateOrganizationRequest {
  int64  parent_id = 1; // 父节点 ID；0 表示根
  string name = 2; // 组织名称，唯一同级校验
}
message CreateOrganizationResponse {
  int64 id = 1;
}

/* 按 ID 查询单个节点 */
message GetOrganizationRequest {
  int64 id = 1; // 组织主键
}

/* 更新节点名称 */
message UpdateOrganizationRequest {
  int64  id = 1; // 待更新的节点 ID
  string name = 2; // 新名称
}

/* 软删除节点 */
message DeleteOrganizationRequest {
  int64 id = 1;
}

message DeleteOrganizationResponse {
  bool success = 1; // 成功标志
}

/* 分页查询子节点 */
message ListOrganizationsRequest {
  int64 parent_id = 1; // 父节点 ID；0 表示查根节点
  int32 limit = 2; // 分页大小
  int32 offset = 3; // 偏移量
}

message ListOrganizationsResponse {
  repeated Organization items = 1; // 当前页数据
  int32 total = 2; // 符合条件的总数
}

/* 获取祖先链 */
message GetAncestorsRequest {
  int64 id = 1; // 起始节点 ID
}

message GetAncestorsResponse {
  repeated Organization Ancestors = 1; // 祖先列表（含自身）
}

/* 获取后代树 */
message GetDescendantsRequest {
  int64 id = 1; // 起始节点 ID
  int32 depth = 2; // 最大深度；<=0 表示不限
}

message GetDescendantsResponse {
  OrganizationTree organizationTree = 1; // 后代列表
}

/*================ 实体 ================*/

/* 组织节点实体，与表 org.organizations 一一对应 */
message Organization {
  int64  id = 1; // 主键
  int64  parent_id = 2; // 父节点 ID；根节点为 0
  string name = 3; // 名称
  int64  created_at = 4; // 创建时间戳（毫秒）
  int64  updated_at = 5; // 更新时间戳（毫秒）
  int64  deleted_at = 6; // 软删除时间戳；0 表示未删除
  int64  disabled_at = 7; // 禁用时间戳；0 表示未禁用
}
message OrganizationTree {
  int64  id = 1; // 主键
  int64  parent_id = 2; // 父节点 ID；根节点为 0
  string name = 3; // 名称
  int64  created_at = 4; // 创建时间戳（毫秒）
  int64  updated_at = 5; // 更新时间戳（毫秒）
  int64  deleted_at = 6; // 软删除时间戳；0 表示未删除
  int64  disabled_at = 7; // 禁用时间戳；0 表示未禁用
  repeated OrganizationTree children = 8;
}